--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,8 @@ services:
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/home
+    working_dir: /home
     ports:
-      - "3000:3000"
+      - "80:3000"
     depends_on:
       - db
