--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,28 @@
 version: "3.9"
 services:
-  db:
-    image: postgres
-    volumes:
-      - ./tmp/db:/var/lib/postgresql/data
+  postgres:
+    image: postgres:14-alpine
+    command: ["postgres", "-c", "fsync=false", "-c", "full_page_writes=off"]
     environment:
       POSTGRES_PASSWORD: password
-  web:
-    build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
-      - .:/home
-    working_dir: /home
+      - ./tmp/db:/var/lib/postgresql/data
     ports:
-      - "80:3000"
+      - "5432:5432"
+  app:
+    build:
+      context: .
+      dockerfile: app.Dockerfile
+    command: bash -c "bundle exec puma -C config/puma.rb"
+    volumes:
+      - .:/app
     depends_on:
-      - db
+      - postgres
+  nginx:
+    build:
+      context: .
+      dockerfile: ./nginx.Dockerfile
+    depends_on:
+      - app
+    ports:
+      - 80:80
